Descomplicando_Kubernetes/Aula_Aovivo_Istio/istio_aula/giropops-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: giropops-labs-portal-v1
  namespace: giropops
  labels:
    app: giropops
    version: v1
spec:
  replicas: 1
  selector:
    matchLabels:
      app: giropops
      version: v1
  template:
    metadata:
      labels:
        app: giropops
        version: v1
    spec:
      containers:
        - name: giropops
          image: linuxtips/giropops-labs-portal:3.0
          ports:
            - containerPort: 8081
