Descomplicando_Kubernetes/Aula_Aovivo_Istio/istio_aula/redis-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: redis-labs
  namespace: giropops
  labels:
    app: redis
spec:
  replicas: 1
  selector:
    matchLabels:
      app: redis
  template:
    metadata:
      labels:
        app: redis
    spec:
      containers:
        - name: redis
          image: redis
          ports:
            - containerPort: 6379
