Descomplicando_Kubernetes/Aula_Aovivo_Istio/istio_aula/strigus-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: strigus-labs-v1
  namespace: giropops
  labels:
    app: strigus
    version: v1
spec:
  replicas: 1
  selector:
    matchLabels:
      app: strigus
      version: v1
  template:
    metadata:
      labels:
        app: strigus
        version: v1
    spec:
      containers:
        - name: strigus-labs-container
          image: linuxtips/strigus-labs-service:3.0
          ports:
            - containerPort: 8082
