Descomplicando_Kubernetes/Aula_Aovivo_Istio/istio_aula/chaos-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: chaos-labs-service
  namespace: giropops
  labels:
    app: chaos
spec:
  selector:
    app: chaos
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8085
