Descomplicando_Kubernetes/Aula_Aovivo_Istio/istio_aula/giropops-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: giropops-labs-portal
  namespace: giropops
  labels:
    app: giropops
spec:
  selector:
    app: giropops
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 8081
