Descomplicando_Kubernetes/Aula_Aovivo_Istio/istio_aula/girus-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: girus-labs-service
  namespace: giropops
  labels:
    app: girus
spec:
  selector:
    app: girus
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8083
