Descomplicando_Kubernetes/Aula_Aovivo_Istio/istio_aula/redis-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: redis-labs
  namespace: giropops
  labels:
    app: redis
spec:
  selector:
    app: redis
  ports:
    - protocol: TCP
      port: 6379
      targetPort: 6379
