Descomplicando_Kubernetes/Aula_Aovivo_Istio/istio_aula/silver-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: silver-labs-service
  namespace: giropops
  labels:
    app: silver
spec:
  selector:
    app: silver
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8084
