Descomplicando_Kubernetes/Aula_Aovivo_Istio/istio_aula/strigus-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: strigus-labs-service
  namespace: giropops
  labels:
    app: strigus
spec:
  selector:
    app: strigus
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 8082
