Descomplicando_Kubernetes/Aula_Aovivo_Istio/istio_aula/gateway-giropops-v1.yaml
apiVersion: networking.istio.io/v1
kind: Gateway
metadata:
  name: gateway-giropops-v1
  namespace: giropops
spec:
  selector:
    istio: ingressgateway
  servers:
    - port:
        number: 80
        name: http
        protocol: HTTP
      hosts:
        - "giropops-labs.io"
