Descomplicando_Kubernetes/Aula_Aovivo_Istio/istio_aula/destinationrule-giropops-v1.yaml
apiVersion: networking.istio.io/v1
kind: DestinationRule
metadata:
  name: destinationrule-giropops-v1
  namespace: giropops
spec:
  host: giropops-labs-portal
  trafficPolicy:
    loadBalancer:
      simple: ROUND_ROBIN
