Descomplicando_Kubernetes/Aula_Aovivo_Istio/istio_aula/virtualservice-giropops-v1.yaml
apiVersion: networking.istio.io/v1
kind: VirtualService
metadata:
  name: giropops-v1
  namespace: giropops
spec:
  hosts:
    - "giropops-labs.io"
  gateways:
    - gateway-giropops-v1
  http:
    - match:
        - uri:
            prefix: /giropops
      route:
        - destination:
            host: giropops-labs-portal
            port:
              number: 80
      rewrite:
        uri: /
    - match:
        - uri:
            prefix: /strigus
      route:
        - destination:
            host: strigus-labs-service
            port:
              number: 80
      rewrite:
        uri: /
    - match:
        - uri:
            prefix: /chaos
      route:
        - destination:
            host: chaos-labs-service
            port:
              number: 80
      rewrite:
        uri: /
    - match:
        - uri:
            prefix: /girus
      route:
        - destination:
            host: girus-labs-service
            port:
              number: 80
      rewrite:
        uri: /
    - match:
        - uri:
            prefix: /silver
      route:
        - destination:
            host: silver-labs-service
            port:
              number: 80
      rewrite:
        uri: /
